# mdm-maximus-hostpial-plus-plus

./: .gitignore  .replit  Hospital++.py  docker-compose.yaml  problem.md  pyproject.toml  readme.md  replit.md
app/: compose.yaml
app/backend/: .gitignore  Dockerfile  main.py  requirements.txt  seed.py
app/backend/models/: __init__.py  database.py  models.py  schemas.py
app/backend/routers/: analytics.py  ebm.py  hubs.py  ingestion.py  inventory.py  spokes.py  supply_routes.py  ws.py
app/backend/services/: ebm_predictor.py  ingestion.py  ml_interface.py  nats_service.py  pathfinding.py
app/frontend/: Dockerfile  README.md  flask_ebm_api.py  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/frontend/src/: App.tsx  index.css
app/frontend/src/components/: BestPathPanel.tsx
app/frontend/src/contexts/: NodeIdentityContext.tsx
app/frontend/src/hooks/: useUPlot.ts  (+1 more)
cyber/: README.md  container-security.md  security-controls.md  threat-model.md
cyber /: OPSEC-HIPPA  USMC_Web_App_Security_Policy_v1.0.md  USMC_Web_App_Standards_Executive_Summary.md  USMC_Web_App_Standards_List.md  data_classification_policy.md
data/: MedSupply_Data_Tables.xlsx
dha_rescue/: README.md  app.py  ebm_model.py  eda_upgrade.py  model.py  requirements.txt  train_ebm_pkl.py  utils.py
ml/: .gitignore  README.md  requirements.txt
ml/config/: model_config.yaml
ml/serving/: predictor.py
ml_models/: README.md  advanced_ml.py  app.py  data.py  model.py  requirements.txt
notebooks/: blood_logistics_decision_support.ipynb  eda_starter.ipynb
(+32 files in other folders)
