[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "interpret>=0.6.0",
    "nats-py>=2.7.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.4.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]
